# horus-conexao

./: .gitignore  Dockerfile  app.py  compose.yaml  database.py  get-ssl.sh  models.py  nginx.conf  pyproject.toml  schemas.py  settings.py
migrations/: env.py
migrations/versions/: 0a70d9ff1920_init.py  3f8a02b537a0_add_gateway.py
routers/: api.py
routers/endpoints/: ble.py  gateway.py  map.py
