[project]
name = "mqtt-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt>=2.1.0",
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.32.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.31.0",
    "alembic>=1.17.2",
    "pydantic[setting]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "psycopg2-binary>=2.9.11",
    "gunicorn>=23.0.0",
    "pydantic-extra-types>=2.10.6",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
]
